// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooksDisplay should match snapshot when given books 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addBookToClub={[Function]}
    books={
        Array [
            Object {
              "authors": Array [
                "Jeff",
              ],
              "imageLinks": Object {
                "thumbnail": "book.jpg",
              },
              "title": "Annihilation",
            },
          ]
    }
    currentClub={
        Object {
            "books": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="bookPreview"
>
          <h4>
                    Annihilation
          </h4>
          <h5>
                    Author: 
                    Jeff
          </h5>
          <img
                    className="bookPreviewImg"
                    src="book.jpg"
          />
          <br />
          <button
                    onClick={[Function]}
          >
                     Add to your club!
          </button>
</div>,
      ],
      "className": "bookshelf",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4>
              Annihilation
</h4>,
            <h5>
              Author: 
              Jeff
</h5>,
            <img
              className="bookPreviewImg"
              src="book.jpg"
/>,
            <br />,
            <button
              onClick={[Function]}
>
               Add to your club!
</button>,
          ],
          "className": "bookPreview",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Annihilation",
            },
            "ref": null,
            "rendered": "Annihilation",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Author: ",
                "Jeff",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Author: ",
              "Jeff",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bookPreviewImg",
              "src": "book.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " Add to your club!",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Add to your club!",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="bookPreview"
>
            <h4>
                        Annihilation
            </h4>
            <h5>
                        Author: 
                        Jeff
            </h5>
            <img
                        className="bookPreviewImg"
                        src="book.jpg"
            />
            <br />
            <button
                        onClick={[Function]}
            >
                         Add to your club!
            </button>
</div>,
        ],
        "className": "bookshelf",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                Annihilation
</h4>,
              <h5>
                Author: 
                Jeff
</h5>,
              <img
                className="bookPreviewImg"
                src="book.jpg"
/>,
              <br />,
              <button
                onClick={[Function]}
>
                 Add to your club!
</button>,
            ],
            "className": "bookPreview",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Annihilation",
              },
              "ref": null,
              "rendered": "Annihilation",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Author: ",
                  "Jeff",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Author: ",
                "Jeff",
              ],
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "bookPreviewImg",
                "src": "book.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " Add to your club!",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": " Add to your club!",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`BooksDisplay should match snapshot when given no books 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addBookToClub={[Function]}
    currentClub={
        Object {
            "books": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "bookshelf",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "bookshelf",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
